@@ -1,4 +1,8 @@
 2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
+	* recover-src/set_commands.c: cd_glob(): replace strappend() usage with
+	  g_strconcat(); improve g_strjoin() usage; use g_free()
+
+2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
 	* recover-src/extract-list.c: delete_glob(): replace strappend() usage
 	  with g_strconcat(); fix regex
 
